--- a/src/index.css
+++ b/src/index.css
@@ -13,6 +13,12 @@
   color-scheme: dark;
 }
 
+body{
+  background-color: #303030; 
+  color: #E0E0E0; 
+}
+
+
 .hash-span {
   margin-top: -100px;
   padding-bottom: 100px;
